# Auto-cooler

./: CMakeLists.txt  README.md  SecureKeypadProject.map  build.bat  linker.ld  startup.s
app/: main.c
common/: Bit_Math.h  Bit_Operations.h  Std_Types.h  Utils.h
hal/Keypad/: Keypad.c  Keypad.h
hal/lcd1602/: Lcd1602.c  Lcd1602.h
hal/led_bar/: LedBar.c  LedBar.h
hal/seven_seg/: SevenSeg.c  SevenSeg.h
mcal/Adc/: Adc.c  Adc.h  Adc_Private.h
mcal/Exti/: Exti.c  Exti.h
mcal/Nvic/: Nvic.c  Nvic.h
mcal/Pwm/: Pwm.c  Pwm.h
mcal/Timer/: Timer.c  Timer.h  Timer_Private.h
mcal/gpio/: Gpio.c  Gpio.h  Gpio_Private.h
mcal/rcc/: Rcc.c  Rcc.h  Rcc_Private.h
